[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
test-case = "2.2"